# kikd-lista6-nierownomierna

./: .gitignore  CMakeLists.txt  README.md  cpy.txt
BitBuffers/: BitReader.cpp  BitReader.hpp  BitWriter.cpp  BitWriter.hpp  CMakeLists.txt  bitFiles.cpp  bitFiles.hpp
adapter/: CMakeLists.txt  TgaAdapter.cpp  TgaAdapter.hpp  image.cpp  image.h  tgaPersister.cpp  tgaPersister.hpp
adapter/libtga-master/: Makefile  cmake_install.cmake
adapter/libtga-master/src/: Makefile  cmake_install.cmake
coder/: CMakeLists.txt  Coder.hpp  DifferentialCoder.cpp  DifferentialCoder.hpp  NonUniformConstQuantizer.cpp  NonUniformConstQuantizer.hpp  NonUniformQuantizer.cpp  NonUniformQuantizer.hpp  Quantizer.hpp
filter/: CMakeLists.txt  Filter.hpp  FilterQuantizer.hpp  HigherFilter.cpp  HigherFilter.hpp  IdQuantizer.cpp  IdQuantizer.hpp  LowerFilter.cpp  LowerFilter.hpp  LowerFilterProcess.cpp  LowerFilterProcess.hpp  UniformFilterQuantizer.cpp  UniformFilterQuantizer.hpp  UpperFilter.cpp  UpperFilter.hpp  UpperFilterProcess.cpp  UpperFilterProcess.hpp
main/: CMakeLists.txt  decoder.cpp  diff.cpp  encoder.cpp  functions.cpp  functions.hpp  test.cpp
